# macam64

./: .travis.yml  CMakeLists.txt  COPYING.txt  README  README.md
app_specific/: MyCameraInspector.h  MyCameraInspector.m  MyController.h  MyController.m  MyImageDocument.h  MyImageDocument.m  MyImageWindowController.h  MyImageWindowController.m  MyMovieDocument.h  MyMovieDocument.m  MyMovieRecorder.h  MyMovieRecorder.m  MyMovieWindowController.h  MyMovieWindowController.m  MyNSMovieExtensions.h  MyNSMovieExtensions.m  MyPrefsWindowController.h  MyPrefsWindowController.m  MyQCOrbitCameraInspector.h  MyQCOrbitCameraInspector.m  MyQX3CameraInspector.h  MyQX3CameraInspector.m  MyScrollView.h  MyScrollView.m  QTDummyPanel.h  QTDummyPanel.m  generate_app.plist  main.m
cameras/: CN0352PDriver.h  CTDC1100Driver.h  CTDC1100Driver.m  CX11646Driver.h  CX11646Driver.m  DivioDriver.h  DivioDriver.m  ET61xx51Driver.h  ET61xx51Driver.m  ExampleDriver.h  ExampleDriver.m  GenericDriver.h  GenericDriver.m  IBMcamDriver.h  IBMcamDriver.m  JFIFHeaderTemplate.c  JFIFHeaderTemplate.h  JL2005ADriver.h  JL2005ADriver.m  KworldTV300UDriver.h  KworldTV300UDriver.m  M560xDriver.h  M560xDriver.m  MR97311Driver.h  MR97311Driver.m  MX88L510Driver.h  MyCPIACameraDriver.h  MyCPIACameraDriver.m  MyIntelPCCameraPro.h  MyIntelPCCameraPro.m  MyKiaraFamilyDriver.h  MyKiaraFamilyDriver.m  MyKiaraFlippedDriver.h  MyKiaraFlippedDriver.m  MyLogi3000Driver.h  MyLogi3000Driver.m  MyOV511Driver.h  MyOV511Driver.m  MyPhilipsCameraDriver.h  MyPhilipsCameraDriver.m  (+115 more)
component_specific/: MyBridge.h  MyBridge.m  QTComponent.r  QTPanel.h  QTPanel.m  QTVideoDigitizer.h  QTVideoDigitizer.m  generate_component.plist
driver_core/: MyCameraCentral.h  MyCameraCentral.m  MyCameraDriver.h  MyCameraDriver.m  MyCameraInfo.h  MyCameraInfo.m  MyDummyCameraDriver.h  MyDummyCameraDriver.m  NSObject.h
ica_specific/: ICD_CameraCalls.h  generate_ica_module.plist  main.m
macam.pbproj/: .cvsignore  project.pbxproj
macam.xcodeproj/: .cvsignore  project.pbxproj
sensors/: ControllerInterface.h  ControllerInterface.m  OV7640.h  OV7640.m  OV7660.h  OV7660.m  OV7670.h  OV7670.m  OV76xx.h  OV76xx.m  OV7F7F.h  OV7F7F.m  OmniVisionSensor.h  OmniVisionSensor.m  Sensor.h  Sensor.m
texts/: QCE.txt  QT_architecture.txt  SPCA504A_Aiptek_MegaCam.txt  STV680.txt  Supported_Cameras.html  TODO.txt  inspector.txt  packaging.txt  source_documentation.txt  tags.txt
utilities/: AGC.h  AGC.m  BayerConverter.h  BayerConverter.m  FrameCounter.h  FrameCounter.m  GlobalDefs.h  Histogram.h  Histogram.m  JpgDecompress.c  JpgDecompress.h  LookUpTable.h  LookUpTable.m  MiniGraphicsTools.c  MiniGraphicsTools.h  MiscTools.c  MiscTools.h  RGB888Scaler.h  RGB888Scaler.m  RGBScaler.h  RGBScaler.m  RGBScalerIncluded.h  Resolvers.c  Resolvers.h  USB_VendorProductIDs.h  yuv2rgb.c  yuv2rgb.h  yuv2rgbCPIA420.c  yuv2rgbCPIA422.c  yuv2rgbOV420.c  (+1 more)
(+162 files in other folders)
